quiz, story update